# ckc-rs

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yaml
src/: deck.rs  hand_rank.rs  lib.rs  parse.rs
src/alt/: binary_card.rs  bit_card.rs  mod.rs
src/bitvec/: bit_card.rs  bit_cards.rs
src/cards/: binary_card.rs  five.rs  four.rs  mod.rs  seven.rs  six.rs  three.rs  two.rs
src/games/: mod.rs  razz.rs
src/lookups/: examples.snip  mod.rs
src/types/: bit_card.rs  deck.rs  mod.rs
