[package]
name = "ckc-rs"
description = "Poker hand evaluation library"
version = "0.1.15"
authors = ["electronicpanopticon <gaoler@electronicpanopticon.com>"]
repository = "https://github.com/ImperialBower/ckc-rs.git"
homepage = "https://github.com/ImperialBower/ckc-rs"
edition = "2021"
rust-version = "1.65"
license = "Apache-2.0"
exclude = [".github/workflows/*", ".gitignore", "Cargo.lock"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.21", default-features = false }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }

[dev-dependencies]
cardpack = "0.5.1"
rstest = "0.18.2"
