[package]
name = "ckc-rs"
description = "Poker hand evaluation library"
version = "0.1.18"
authors = ["electronicpanopticon <gaoler@electronicpanopticon.com>"]
repository = "https://github.com/ImperialBower/ckc-rs.git"
homepage = "https://github.com/ImperialBower/ckc-rs"
edition = "2021"
rust-version = "1.70"
license = "Apache-2.0"
exclude = [".github/workflows/*", ".gitignore", "Cargo.lock"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }

[dev-dependencies]
rstest = "0.25.0"
